Actualizando href con el enlace del repositorio.

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     <div class="container-header">
         <h1>ClaveYa</h1>
         <button id="theme-toggle" class="uk-button uk-button-default uk-button-style">
-            <a uk-icon="icon: github-alt" href="https://www.youtube.com" target="_blank" rel="noopener noreferrer"></a>
+            <a uk-icon="icon: github-alt" href="https://github.com/tanoriruizs/ClaveYa" target="_blank" rel="noopener noreferrer"></a>
           </button>
           
     </div>
